--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,33 @@
             <version>2.48.2</version>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>cucumber-tests</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>none</exclude>
+                            </excludes>
+                            <includes>
+                                <!-- Include your Cucumber tests, as an example -->
+                                <include>**/*RunTests.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+
 </project>
